More work for ENTESB-1996: Support users configuring the http security
Default httpd.conf contains comments on how to enable security.

--- a/template/.openshift/httpd.conf
+++ b/template/.openshift/httpd.conf
@@ -1,2 +1,14 @@
 # You can add Apache HTTPD config statements here.
 #
+
+## For example, you can uncomment the following section to enable basic auth
+## for the mvn repo.  Make sure you create the passwords file in this directory
+## Using the 'htpasswd -c passwords admin' command.
+
+#<Location />
+#AuthType Basic
+#AuthName "Restricted Files"
+#AuthBasicProvider file
+#AuthUserFile ../app-root/repo/.openshift/passwords
+#Require valid-user
+#</Location>
