--- a/bin/control
+++ b/bin/control
@@ -14,6 +14,10 @@ function restart {
 }
 
 function build() {
+  
+  # restart the http server so it can pick up any config changes.
+  ${OPENSHIFT_MVNREPO_DIR}/bin/control restart 
+  
   echo "Building $cartridge_type cartridge"
 
   MAVEN_SETTINGS_FILE="${OPENSHIFT_MVNREPO_DIR}/etc/settings.xml"
@@ -99,9 +103,9 @@ case "$1" in
   start)     start ;;
   stop)      stop ;;
   restart)   restart ;;
+  reload)    restart ;;
   deploy)    catchall ;;
   status)    catchall ;;
-  reload)    catchall ;;
   tidy)      catchall ;;
   *)         exit 0
 esac
