Fixes ENTESB-2027: Secuirty+scaling breaks repository access

--- a/template/.openshift/httpd.conf
+++ b/template/.openshift/httpd.conf
@@ -5,7 +5,7 @@
 ## for the mvn repo.  Make sure you create the passwords file in this directory
 ## Using the 'htpasswd -c passwords admin' command.
 
-#<Location />
+#<Location /repo>
 #AuthType Basic
 #AuthName "Restricted Files"
 #AuthBasicProvider file
