--- a/bin/control
+++ b/bin/control
@@ -92,6 +92,13 @@ function build() {
 
 }
 
+function tidy() {
+  client_message "Emptying log dir: $OPENSHIFT_LOG_DIR"
+  shopt -s dotglob
+  rm -rf $OPENSHIFT_LOG_DIR/*
+  restart
+}
+
 function catchall {
     echo "not yet implemented"
 }
@@ -101,8 +108,8 @@ case "$1" in
   stop)      stop ;;
   restart)   restart ;;
   reload)    restart ;;
+  tidy)      tidy ;;
   deploy)    catchall ;;
   status)    catchall ;;
-  tidy)      catchall ;;
   *)         exit 0
 esac
