Fixes ENTESB-2042: .openshift/httpd.conf should not be in git repo for Jboss Builder Cartridge

--- a/template/.openshift/config/httpd.conf
+++ b/template/.openshift/config/httpd.conf
@@ -9,6 +9,6 @@
 #AuthType Basic
 #AuthName "Restricted Files"
 #AuthBasicProvider file
-#AuthUserFile ../app-root/repo/.openshift/passwords
+#AuthUserFile ../app-root/repo/.openshift/config/passwords
 #Require valid-user
 #</Location>
