--- a/bin/control
+++ b/bin/control
@@ -73,9 +73,10 @@ function reload() {
 function tidy() {
   client_message "Emptying log dir: $OPENSHIFT_FUSE_LOG_DIR"
   shopt -s dotglob
-  rm -rf $OPENSHIFT_FUSE_LOG_DIR/*
-  truncate -s0 $OPENSHIFT_FUSE_DIR/container/data/log/karaf.log
-  rm -f $OPENSHIFT_FUSE_DIR/container/data/log/karaf.log.*
+  shopt -s extglob
+  not_removed=karaf-${OPENSHIFT_APP_NAME}.log
+  (cd ${OPENSHIFT_FUSE_LOG_DIR}; for name in `echo "@(!(${not_removed}))"`; do rm -rf $name; done)
+  truncate -s0 "${OPENSHIFT_FUSE_LOG_DIR}/karaf-${OPENSHIFT_APP_NAME}.log"
 }
 
 function is_running() {
