--- a/bin/control
+++ b/bin/control
@@ -15,7 +15,7 @@ function start() {
   fi
   
   # apply any patches we have in patches dir to the booted GA distro
-  ${OPENSHIFT_FUSE_DIR}/bin/upgrade 0 0 0 0
+  ${OPENSHIFT_FUSE_DIR}/bin/upgrade
 }
 
 function stop() {
